infra/k8s/manifests/django-demo-deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: django-demo
  labels:
    component: django-demo
spec:
  selector:
    matchLabels:
      component: django-demo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        component: django-demo        
    spec:
      containers:
      - image: premhashmap/django-demo:latest
        name: django-demo
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            memory: "250Mi"
            cpu: "500m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
